# hearthstone-cli

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
src/: main.py
src/stone/: bootstrap.py  main.py
src/stone/domain/: command.py  commands.py  event.py  events.py  model.py
src/stone/service_layer/: handler.py  message_bus.py
tests/: conftest.py  pytest.ini  test_main.py
tests/domain/: test_card.py  test_model.py
