[tool.poetry]
name = "hearthstone-cli"
version = "0.1.0"
description = ""
authors = ["한바름 <rumbarum@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = "False"
mypy_path = "./src"
check_untyped_defs = "True"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
