[tool.poetry]
name = "hearthstone-cli"
version = "0.1.0"
description = ""
authors = ["한바름 <rumbarum@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = "True"
mypy_path = "src/stone"
check_untyped_defs = "True"

[tool.pytest.ini_options]
addopts = "--tb=short"
pythonpath = "src"

[tool.poetry.dependencies]
python = "^3.11.1"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
